# phonebook

phonebook/: README.md  angular.json  package-lock.json  package.json
phonebook-api/: pyproject.toml
phonebook-api/phonebook/: db.sqlite3
phonebook-api/phonebook/api/: models.py  serializers.py  urls.py  views.py
phonebook-api/phonebook/api/migrations/: 0001_initial.py  0002_contact_image_url.py
phonebook-api/phonebook/phonebook/: settings.py  urls.py
phonebook/src/: styles.sass
phonebook/src/app/: app.component.html  app.module.ts
phonebook/src/app/contact-card/: contact-card.component.html  contact-card.component.sass  contact-card.component.ts
phonebook/src/app/contact-details/: contact-details.component.html  contact-details.component.sass  contact-details.component.ts
phonebook/src/app/contact-list/: contact-list.component.html  contact-list.component.sass  contact-list.component.ts
phonebook/src/app/editable-contact-card/: editable-contact-card.component.html  editable-contact-card.component.sass  editable-contact-card.component.spec.ts  editable-contact-card.component.ts
phonebook/src/app/main-grid/: main-grid.component.html  main-grid.component.sass  main-grid.component.ts
phonebook/src/app/nav/: nav.component.html  nav.component.sass
phonebook/src/app/services/contacts/: contacts.service.ts  models.ts
phonebook/src/environments/: environment.ts
